# Catalyst_Chunker

./: .gitignore  .importlinter  ARCHITECTURE_STANDARDS.md  CHANGELOG.md  Catalyst-Chunker_deep-research-report.md  LICENSE  README.md  RELEASE_CHECKLIST.md  TODO.md  catalyst.toml  pyproject.toml
.github/workflows/: ci.yml
ADRs/: ADR-0001-eba-layer-admission.md  ADR-0002-source-lineage-mandatory.md  ADR-0003-fixed-size-slicing-fallback-only.md  ADR-0004-structure-first-prose-default.md  ADR-0005-code-chunking-ast-aware-default.md  ADR-0006-semantic-chunking-refinement-only.md  ADR-0007-retrieval-context-recovery-not-blanket-overlap.md  ADR-0008-docling-boundary-adapter.md  ADR-0009-public-projections-schema-versions.md  ADR-0010-rejected-candidates-inspectable.md  ADR-0011-property-based-invariant-fuzzing.md  ADR-0012-retrieval-evaluation-heldout-metrics.md  ADR-0013-performance-benchmarks-diagnostic.md  ADR-0014-retrieval-ingestion-examples-boundary-external.md  ADR-0016-messy-source-family-fixtures.md  ADR-0017-admission-explanation-trace.md  ADR-0018-relation-evidence-before-relation-scoring.md  ADR-0019-document-adapter-contradiction-fixtures.md
ADRs/implemented/: ADR-0001-eba-layer-admission.md  ADR-0004-structure-first-prose-default.md  ADR-0005-code-chunking-ast-aware-default.md  ADR-0006-semantic-chunking-refinement-only.md  ADR-0008-docling-boundary-adapter.md  ADR-0009-public-projections-schema-versions.md  ADR-0010-rejected-candidates-inspectable.md  ADR-0015-telemetry-adapters-optional.md
docs/: DECISION_LEDGER.md  INVARIANTS.md  PROJECTIONS.md  README.md
docs/architecture/: ARCHITECTURE.md  BOUNDARIES.md  DECISION_LEDGER.md  INVARIANTS.md  SYSTEM_LANGUAGE.md
docs/development/: CONTRIBUTING.md  RELEASE.md  ROADMAP.md  SECURITY.md  TESTING.md
docs/examples/: README.md  retrieval_ingestion.py
docs/guides/: AGENTIC_INTEGRATION.md  CLI.md  LIBRARY_USAGE.md  OPTIONAL_ADAPTERS.md  QUICKSTART.md  RETRIEVAL_INGESTION.md  TELEMETRY.md
docs/reference/: API.md  CONFIGURATION.md  ERRORS.md  PROJECTIONS.md  STABLE_IDS.md
governance/policies/: architecture_contracts.md  boundary_policy.md
governance/tools/: enforce_boundary_purity.py  enforce_file_size.py  enforce_native_names.py
src/catalyst/: __init__.py
src/catalyst/boundary/: __init__.py
src/catalyst/formation/: __init__.py
src/catalyst/invariant/: __init__.py
src/catalyst/observation/: __init__.py
src/catalyst/operation/: __init__.py
src/catalyst/policy/: __init__.py  document_adapter_admission.py  overlap_policy.py  (+1 more)
tests/contract/: test_ast_grep_adapter.py  test_ast_parser_port.py  test_boundary_ports.py  test_docling_adapter.py
tests/contradiction/: test_code_structure.py  test_document_fixtures.py  test_markdown_false_structure.py  test_semantic_similarity_no_merge.py  test_source_family_fixtures.py  test_source_lineage_contradictions.py
tests/e2e/: test_cli.py  test_release_acceptance.py
tests/integration/: test_chunk_source.py  test_code_chunking.py  test_prose_grouping.py  test_recursive_fallback.py  test_semantic_refinement.py
tests/property/: test_invariant_properties.py
(+172 files in other folders)
