[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "catalyst-chunker"
version = "0.1.0"
description = "Invariant-first chunk formation for source-preserving document and code workflows."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Catalyst Contributors" }
]
keywords = [
  "chunking",
  "retrieval",
  "documents",
  "lineage",
  "audit"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
catalyst = "catalyst.boundary.presentation.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/catalyst"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
